Fixed desktop grid overflow.

--- a/css/desktop/landing.css
+++ b/css/desktop/landing.css
@@ -8,7 +8,7 @@
 
 #landing {
   grid-template-areas: '. logo .' '. intro .' '. social .' '. . .';
-  grid-template-columns: 10% 90% 10%;
+  grid-template-columns: 10% 80% 10%;
   grid-template-rows: 10% 50% 30% 10%;
   min-height: 60rem;
 
